--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
 
+:root{
+    --cond: block;
+}
 header img#logo{
     width: 78px;
     margin-left: 3%;
@@ -11,6 +14,8 @@ header input{
     width: 100%;
     height: 45px;
 }
-header input:focus{
-    width: 100vw;
+input:focus{
+    width: 79vw;
+    left:59vw; /* ajustar em casa mas está relativamente bom */
 }
+
