--- a/estilos/mobile.css
+++ b/estilos/mobile.css
@@ -8,14 +8,35 @@ header img#logo{
     margin-left: 3%;
 }
 header img#compra{
-    width: 45px;
+    width: 40px;
+    left: 93%;
+
 }
 header input{
     width: 100%;
     height: 45px;
 }
 input:focus{
-    width: 79vw;
-    left:59vw; /* ajustar em casa mas está relativamente bom */
+    width: 74vw;
+    left:62vw; /* ajustar em casa mas está relativamente bom */
 }
+header > form > div > input{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 50vw;
+}
+img#menu{
+    display: block;
+    position: absolute;
 
+    left: 82%;
+    top: 50%;
+
+    transform: translate(-50%,-50%);
+    width: 35px;
+}
+img#menu_desktop{
+    display: none;
+}
