--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,19 +8,19 @@ header{
     background-color: purple;
     position: relative;
 }
-header > form > div{
+header > form > div > input{
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 53%;
     transform: translate(-50%,-50%);
-}
+    width: 50vw;
+} /* por algum motivo se juntar com o de baixo da erro */
 header input{
     height: 50px;
     border-radius: 22px;
     padding: 14px;
     font-size: 17px;
     border: 1px solid black;
-    width: 50vw;
 }
 img#compra{
     position: absolute;
@@ -31,7 +31,18 @@ img#compra{
     transform: translate(-50%,-50%);
 }
 img#logo{
-    margin-left: 3%;
+    margin-left: 11%;
+}
+img#menu_desktop{
+    position: absolute;
+
+    left: 5%;
+    top: 50%;
+
+    transform: translate(-50%,-50%);
+}
+img#menu{
+    display: none;
 }
 body{
     background-color: #a8a8a8;
