--- a/estilos/nav-bar.css
+++ b/estilos/nav-bar.css
@@ -1,64 +1,78 @@
 * {
     margin: 0;
     padding: 0;
-  }
-  
-  a {
+}
+
+a {
     color: #fff;
     text-decoration: none;
     transition: 0.3s;
-  }
-  
-  a:hover {
+    border: 2px solid white;
+    padding: 13px;
+    border-radius: 20px;
+    display: block;
+    width: 25vh;
+    box-shadow: 3px 3px 4px #210d25;
+}
+
+a:hover {
     opacity: 0.7;
-  }
-  
-  .menu_lateral {
+}
+#inutil{
+    display: none;
+}
+.menu_lateral {
     font-size: 24px;
     text-transform: uppercase;
     letter-spacing: 4px;
-  }
-  
-  nav {
+}
+
+nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
-  }
-  .nav-list {
+}
+
+.nav-list {
     list-style: none;
     display: flex;
     margin-top: 12.6vh;
     padding: 25px;
-  }
-  
-  .nav-list li {
+}
+
+.nav-list li {
     letter-spacing: 3px;
     text-align: center;
     margin-bottom: 8vh;
-  }
-  
-  .menu {
-    display: none;
-    cursor: pointer;
-    position: absolute;
+}
+@media screen and (min-width:701px) {
+    .menu {
+        display: none;
+        cursor: pointer;
+        position: absolute;
 
-    left: 5%;
-    top: 50%;
+        left: 5%;
+        top: 50%;
 
-    transform: translate(-50%,-50%);
-  }
-  
-  .menu div {
-    width: 32px;
-    height: 3px;
+        transform: translate(-50%, -50%);
+    }
+.menu div{
+    width: 38px;
+    height: 4px;
+}
+}
+
+
+.menu div {
     background: #000000;
     margin: 8px;
     transition: 0.3s;
-  }
+}
 body {
     overflow-x: hidden;
 }
+
 .nav-list {
     position: absolute;
     top: 8vh;
@@ -71,24 +85,28 @@ body {
     transform: translateX(-100%);
     transition: transform 0.3s ease-in;
 }
+
 .nav-list li {
     margin-right: 0;
     opacity: 0;
 }
+
 .menu {
     display: block;
 }
+
 .nav-list.active {
-transform: translateX(0);
+    transform: translateX(0);
 }
 
 @keyframes navLinkFade {
-from {
-    opacity: 0;
-    transform: translateX(50px);
-}
-to {
-    opacity: 1;
-    transform: translateX(0);
-}
+    from {
+        opacity: 0;
+        transform: translateX(50px);
+    }
+
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
 }
