--- a/estilos/menu_desktop.css
+++ b/estilos/menu_desktop.css
@@ -7,19 +7,10 @@ a {
     color: #fff;
     text-decoration: none;
     transition: 0.3s;
-    border: 2px solid white;
-    padding: 13px;
-    border-radius: 20px;
-    display: block;
-    width: 25vh;
-    box-shadow: 3px 3px 4px #210d25;
 }
 
 a:hover {
     opacity: 0.7;
-}
-#inutil{
-    display: none;
 }
 .menu_lateral {
     font-size: 24px;
@@ -37,30 +28,45 @@ nav {
 .nav-list {
     list-style: none;
     display: flex;
-    margin-top: 12.6vh;
     padding: 25px;
+    position: absolute;
+    top: 21vh;
+    left: 0;
+    width: 15vw;
+    height: 80vh;
+    background: #40004d;
+    flex-direction: column;
+    align-items: center;
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in;
 }
 
 .nav-list li {
     letter-spacing: 3px;
     text-align: center;
-    margin-bottom: 8vh;
+    margin-bottom: 7vh;
 }
-@media screen and (min-width:701px) {
-    .menu {
-        display: none;
-        cursor: pointer;
-        position: absolute;
+.nav-list a{
+    border: 2px solid white;
+    padding: 15px;
+    border-radius: 20px;
+    display: block;
+    width: 13vw;
+    box-shadow: 3px 3px 4px #210d25;
+}
+.menu {
+    display: none;
+    cursor: pointer;
+    position: absolute;
 
-        left: 5%;
-        top: 50%;
+    left: 5%;
+    top: 50%;
 
-        transform: translate(-50%, -50%);
-    }
+    transform: translate(-50%, -50%);
+}
 .menu div{
     width: 38px;
     height: 4px;
-}
 }
 
 
@@ -71,19 +77,6 @@ nav {
 }
 body {
     overflow-x: hidden;
-}
-
-.nav-list {
-    position: absolute;
-    top: 8vh;
-    left: 0;
-    width: 15vw;
-    height: 85vh;
-    background: #40004d;
-    flex-direction: column;
-    align-items: center;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-in;
 }
 
 .nav-list li {
