--- a/estilos/style.css
+++ b/estilos/style.css
@@ -7,6 +7,7 @@
 header{
     background-color: purple;
     position: relative;
+    height: 21vh;
 }
 header > form > div > input{
     position: absolute;
@@ -16,10 +17,10 @@ header > form > div > input{
     width: 50vw;
 } /* por algum motivo se juntar com o de baixo da erro */
 header input{
-    height: 50px;
+    height: 8.3vh;
     border-radius: 22px;
     padding: 14px;
-    font-size: 17px;
+    font-size: 18px;
     border: 1px solid black;
 }
 img#compra{
@@ -32,6 +33,8 @@ img#compra{
 }
 img#logo{
     margin-left: 11%;
+    height: 100%;
+    scale: (1.1);
 }
 
 body{
