--- a/estilos/menu_mobile.css
+++ b/estilos/menu_mobile.css
@@ -9,6 +9,7 @@ a {
     transition: 0.3s;
 }
 
+
 a:hover {
     opacity: 0.7;
 }
@@ -24,78 +25,39 @@ nav {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
-
-.nav-list {
-    list-style: none;
-    display: flex;
-    padding: 25px;
-    position: absolute;
-    top: 20vh;
-    left: 0;
-    width: 15vw;
-    height: 80vh;
-    background: #40004d;
-    flex-direction: column;
-    align-items: center;
-    transform: translateX(-100%);
-    transition: transform 0.3s ease-in;
+.nav-list2 , .nav-list{
+    display: none;
 }
-
-.nav-list li {
+.nav-list2{
+    background-color: purple;
+    padding: 25px;
+}
+.nav-list2  li {
     letter-spacing: 3px;
     text-align: center;
-    margin-bottom: 7vh;
+    list-style: none;
+    letter-spacing: 3px;
+    text-align: center;
+    margin-bottom: 15px;
 }
-.nav-list a{
+.nav-list2 a{
+    font-family: Arial, Helvetica, sans-serif;
+    display: block;
     border: 2px solid white;
     padding: 15px;
+    width: 50%;
     border-radius: 20px;
-    display: block;
-    width: 13vw;
     box-shadow: 3px 3px 4px #210d25;
-}
-.menu {
-    display: block;
-    cursor: pointer;
-    position: absolute;
-
-    right: 7%;
-    top: 50%;
-
-    transform: translate(-50%, -50%);
+    margin: auto;
 }
 .menu div{
     width: 38px;
     height: 4px;
     background: #000000;
     margin: 8px;
-    transition: 0.3s;
-}
-body {
-    overflow-x: hidden;
 }
 
-.nav-list li {
-    margin-right: 0;
-    opacity: 0;
-}
 
-.menu {
-    display: block;
-}
 
-.nav-list.active {
-    transform: translateX(0);
-}
 
-@keyframes navLinkFade {
-    from {
-        opacity: 0;
-        transform: translateX(50px);
-    }
 
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
