--- a/estilos/menu_desktop.css
+++ b/estilos/menu_desktop.css
@@ -27,7 +27,9 @@ nav {
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+.nav-list2{
+    display: none;
+}
 .nav-list {
     list-style: none;
     display: flex;
