--- a/estilos/header_desktop.css
+++ b/estilos/header_desktop.css
@@ -1,3 +1,5 @@
+/* separar certo */
+
 @charset "UTF-8";
 
 *{
@@ -32,21 +34,4 @@ img#compra{
 }
 img#logo{
     margin-left: 11%;
-}
-
-body{
-    background-color: #a8a8a8;
-    width: 100%;
-    height: 100vh;
-    position: relative;
-}
-body > div{
-    width: 90vw;
-    background-color: rgb(255, 255, 255);
-    height: 250px;
-    margin: auto;
-    margin-top: 20px;
-}
-footer{
-    background-color: purple;  
 }
