--- a/form/formulario.css
+++ b/form/formulario.css
@@ -3,6 +3,19 @@
     font-family: "Bakbak One";
     src: url(fonte/BakbakOne-Regular.ttf);
 }
+@media screen and (max-width:600px) {
+    .inputUser{
+        width: 97%;
+    }
+}
+@media screen and (min-width:600px){
+    .inputUser{
+        width: 96%;
+    }
+}
+html,body{
+    box-sizing: border-box;
+}
 body{
     background-color:   rgb(68, 68, 68);
     font-family: "Bakbak One";
@@ -18,7 +31,6 @@ legend{
     width: 140px;
 }   
 main{
-    width: 70vw;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -27,34 +39,37 @@ main{
 
 .inputUser{
     background: #ffffff;
-    width: 100%;
     height: 30px;
     border-radius: 20px;
     box-shadow: -5px 10px #2a1247;
     border-style:none;
-
+    margin-bottom:0.5em;
 }
 
 .cadastrar{
     height: 35px;
     width: 140px;
     font-size: 15px;
-    border-radius: 12px;
+    border-radius: 10px;
     border-style:none;
     background-color: rgb(182, 175, 175);
     color: #000000;
     margin-top: 20px;
     font-family: 'Bakbak One', cursive;
-    
 }
 #iestado{
-    width: 16%;
+    width: 18%;
+    padding-right: 2%;
+    margin: 0;
+
 }
 #icidade{
-    width: 84%;
+    width: 80%;
+    padding: 0;
+    margin: 0;
 }
+
 label{
+    margin-right: 2px;
     color: #ffffff;
 }
-
-
