--- a/form/cadastro.css
+++ b/form/cadastro.css
@@ -20,11 +20,27 @@ label{
 body{
     position: relative;
 }
-section{
+img{
+    position: absolute;
+    display: block;
+    left: 18.4%;
+    top: 5%;
+}
+section#descricao{
+    margin-top: 35vh;
+    display: inline-block;
+    margin-left: 5.7vw;
+    width: 42vw;
+    background-color: whitesmoke;
+}
+#descricao > img{
+    margin: auto;
+}
+section#form{
     font-family: "Bakbak One";
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 70%;
     transform: translate(-50%,-50%);
     background-color: rgb(170, 71, 209);
     padding: 13px;
