--- a/form/cadastro.css
+++ b/form/cadastro.css
@@ -7,22 +7,15 @@
 *{
     padding: 0;
     margin: 0;
-    overflow: auto; 
+}
+body{
+    background-color: rgba(133, 39, 255, 0.795);
 }
 header{
     display: none;
 }
-body{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
-    background-color: rgba(133, 39, 255, 0.795);
-}
 label{
     display: block;
-}
-body{
-    position: relative;
 }
 section#descricao{
     position: absolute;
@@ -47,9 +40,9 @@ section#descricao{
 section#form{
     font-family: "Bakbak One";
     position: absolute;
-    top: 50%;
-    left: 70%;
-    transform: translate(-50%,-50%);
+    top: 2%;
+    left: 75%;
+    transform: translate(-50%,0);
     background-color: rgb(170, 71, 209);
     padding: 13px;
     border-radius: 10px;
@@ -89,7 +82,7 @@ label[for="icidade"]{
 #cadastrar{
     margin-top: 0.6em;
     width: 20vw;
-    height: 6vh;
+    padding: 13px;
     cursor: pointer;
 }
 #botao{
