--- a/form/casdastro_mobile.css
+++ b/form/casdastro_mobile.css
@@ -7,7 +7,6 @@
 *{
     padding: 0;
     margin: 0;
-    
 }
 header{
     position: relative;
@@ -17,22 +16,17 @@ header > h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
+    font-size: 1.6em;
 
 }
 header > img, header > h1{
     display: inline;
 }
 body{
-    height: 100vh;
-    width: 100vw;
-    position: relative;
     background-color: rgba(133, 39, 255, 0.795);
 }
 label{
     display: block;
-}
-body{
-    position: relative;
 }
 section#descricao{
     display: none;
@@ -53,7 +47,7 @@ section#form{
     position: absolute;
     top: 70%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%,0);
     background-color: rgb(170, 71, 209);
     padding: 13px;
     border-radius: 10px;
@@ -98,4 +92,7 @@ label[for="icidade"]{
 }
 #botao{
     text-align: center;
+}
+main{
+    position: relative;
 }
