--- a/estilos/header_desktop.css
+++ b/estilos/header_desktop.css
@@ -1,28 +1,35 @@
-/* separar certo */
 
 @charset "UTF-8";
+
+:root{
+    --cor1: #45214A;
+    --cor2: #323050;
+    --cor3: #21445B;
+    --cor4: #1A6566; 
+    --cor5: #5d8a66; 
+
+    --letra: #a2c2eb;
+}
 
 *{
     padding: 0;
     margin: 0;
 }
 header{
-    background-color: purple;
+    background-color: var(--cor3);
     position: relative;
 }
 header > form > div > input{
     position: absolute;
     top: 50%;
-    left: 53%;
-    transform: translate(-50%,-50%);
+    left: 56%;
     width: 50vw;
-} /* por algum motivo se juntar com o de baixo da erro */
-header input{
-    height: 8.3vh;
-    border-radius: 22px;
-    padding: 14px;
+    height: 7.5vh;
+    border-radius: 23px;
+    padding: 12px;
     font-size: 18px;
-    border: 1px solid black;
+    border: 2px solid black;
+    transform: translate(-50%,-50%);
 }
 img#compra{
     position: absolute;
@@ -33,5 +40,5 @@ img#compra{
     transform: translate(-50%,-50%);
 }
 img#logo{
-    margin-left: 11%;
+    margin-left: 10%;
 }
