--- a/estilos/header_mobile.css
+++ b/estilos/header_mobile.css
@@ -1,12 +1,21 @@
-/* separar certo */
 
 @charset "UTF-8";
+
+:root{
+    --cor1: #45214A;
+    --cor2: #323050;
+    --cor3: #21445B;
+    --cor4: #1A6566; 
+    --cor5: #5d8a66; 
+
+    --letra: #a2c2eb;
+}
 *{
     padding: 0;
     margin: 0;
 }
 header{
-    background-color: #800080;
+    background-color:  var(--cor3);
     position: relative;
 }
 header > form > div > input{
@@ -19,7 +28,7 @@ header > form > div > input{
     border-radius: 22px;
     padding: 14px;
     font-size: 18px;
-    border: 1px solid black;
+    border: 2px solid black;
 }
 
 header img#logo{
@@ -35,5 +44,5 @@ header img#compra{
 }
 input:focus{
     width: 74vw;
-    left:62vw; /* ajustar em casa mas está relativamente bom */
+    left:60vw;
 }
