--- a/estilos/menu_desktop.css
+++ b/estilos/menu_desktop.css
@@ -1,3 +1,15 @@
+@charset "UTF-8";
+
+
+:root{
+    --cor1: #45214A;
+    --cor2: #323050;
+    --cor3: #21445B;
+    --cor4: #1A6566; 
+    --cor5: #5d8a66; 
+
+    --letra: #a2c2eb;
+}
 * {
     margin: 0;
     padding: 0;
