--- a/form/cadastro/cadastro.css
+++ b/form/cadastro/cadastro.css
@@ -11,6 +11,8 @@
     --cor3: #21445B;
     --cor4: #1A6566; 
     --cor5: #5d8a66; 
+
+    --letra: #a2c2eb;
 }
 *{
     padding: 0;
@@ -54,7 +56,7 @@ section#form{
     background-color: var(--cor3);
     padding: 13px;
     border-radius: 10px;
-    color: rgb(162, 194, 235);
+    color: #a2c2eb;
 }
 legend{
     font-size: 1.2em;
