--- a/estilos/menu_desktop.css
+++ b/estilos/menu_desktop.css
@@ -19,25 +19,23 @@ header{
 }
 
 a {
-    color: #fff;
+    color: var(--letra);
     text-decoration: none;
     transition: 0.3s;
 }
 
 a:hover {
-    opacity: 0.7;
+    opacity: 0.8;
 }
 .menu_lateral {
     font-size: 24px;
-    text-transform: uppercase;
     letter-spacing: 4px;
 }
-
 nav {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif; /*mudar fonte */
 }
 .nav-list2{
     display: none;
@@ -51,71 +49,64 @@ nav {
     left: 0;
     width: 15vw;
     height: 100vh;
-    background: #40004d;
+    background: #162d3c;
     flex-direction: column;
     align-items: center;
     transform: translateX(-100%);
     transition: transform 0.3s ease-in;
-    
 }
-
 .nav-list li {
     letter-spacing: 3px;
     text-align: center;
     margin-bottom: 7vh;
 }
 .nav-list a{
-    border: 2px solid white;
+    border: 1px solid white;
     padding: 15px;
     border-radius: 20px;
     display: block;
-    width: 13vw;
-    box-shadow: 3px 3px 4px #210d25;
+    width: 15.1vw;
+    box-shadow: 3px 3px 4px #0d1b23;
+}
+.selecionado{
+    background-color: var(--cor2);
+    cursor:default;
+    text-decoration: underline;
+}
+.selecionado:hover{
+    opacity: 1.0;
 }
 .menu {
-    display: none;
     cursor: pointer;
     position: absolute;
-
     left: 5%;
     top: 50%;
-
     transform: translate(-50%, -50%);
 }
 .menu div{
     width: 38px;
     height: 4px;
-}
-
-
-.menu div {
-    background: #000000;
+    background: black;
     margin: 8px;
     transition: 0.3s;
 }
 body {
     overflow-x: hidden;
 }
-
 .nav-list li {
     margin-right: 0;
     opacity: 0;
 }
-
 .menu {
     display: block;
 }
-
 .nav-list.active {
     transform: translateX(0);
 }
-
 img#logo{
     margin-left: 11%;
     height: 100%;
-    scale: (1.1);
 }
-
 @keyframes navLinkFade {
     from {
         opacity: 0;
@@ -126,7 +117,4 @@ img#logo{
         opacity: 1;
         transform: translateX(0);
     }
-}
-.selecionado{
-    background-color: #2c1231;
 }
