--- a/form/cadastro/cadastro.css
+++ b/form/cadastro/cadastro.css
@@ -47,7 +47,8 @@ section#descricao{
     font-size: 2em;
     font-weight: bold;
     font-variant: small-caps;
-}
+    color:white;
+}    
 section#form{
     font-family: "Bakbak One";
     position: absolute;
