--- a/form/cadastro/casdastro_mobile.css
+++ b/form/cadastro/casdastro_mobile.css
@@ -51,6 +51,7 @@ section#descricao{
     font-size: 2em;
     font-weight: bold;
     font-variant: small-caps;
+    color:white;
 }
 section#form{
     font-family: "Bakbak One";
