--- a/form/cadastro/casdastro_mobile.css
+++ b/form/cadastro/casdastro_mobile.css
@@ -24,6 +24,7 @@ header > h1{
     left: 50%;
     transform: translate(-50%,-50%);
     font-size: 1.6em;
+    color: white;
 
 }
 header > img, header > h1{
