--- a/form/cadastroProduto/cadastroProduto.css
+++ b/form/cadastroProduto/cadastroProduto.css
@@ -21,6 +21,7 @@ body{
     width: 100vw;
     height: 100vh;
     background-color: var(--cor1);
+    font-family: "Bakbak One";
 }
 main{
     position: absolute;
@@ -33,6 +34,7 @@ main{
     height: 500px;
     width: 50vw;
     border-radius: 15px;
+    box-shadow: 5px 5px 6px #301734;
 }
 main > form{
     position: absolute; 
@@ -40,14 +42,10 @@ main > form{
     left: 50%;
 
     transform: translate(-50%,-50%);
+    color: var(--texto);
 }
 label{
     display: block;
-}
-input[type="file"]{
-    background-color: white;
-    padding: 7px;
-    width: 50%;
 }
 input, textarea{
     margin: auto;
@@ -56,6 +54,33 @@ input, textarea{
     border-style: none;
     width: 40vw;
     margin-bottom: 0.5em;
-
     box-shadow: -4px 5px 1px var(--cor2);
+}
+textarea{
+    max-height: 50px;
+    max-width: 260px;
+}
+label[for="iimage"]{
+    padding: 5px 7px;
+    color: black;
+    width: 200px;
+    text-transform: uppercase;
+    background-color: white;
+    border-radius: 15px;
+    text-align: center;
+    cursor: pointer;
+    box-shadow: -4px 5px 1px var(--cor2);
+    margin-bottom: .5em;
+    margin-top: .5em;
+}
+input[type="file"]{
+    display: none;
+}
+div#botao{
+    text-align: center;
+}
+input[type="submit"]{
+    margin-top: .8em;
+    background-color: #7aa5dcc3;
+    width: 90%;
 }
