--- a/form/cadastroProduto/cadastroProduto.css
+++ b/form/cadastroProduto/cadastroProduto.css
@@ -31,8 +31,8 @@ main{
     transform: translate(-50%,-50%);
 
     background-color: var(--cor3);
-    height: 500px;
-    width: 50vw;
+    height: 550px;
+    width: 30vw;
     border-radius: 15px;
     box-shadow: 5px 5px 6px #301734;
 }
@@ -44,21 +44,26 @@ main > form{
     transform: translate(-50%,-50%);
     color: var(--texto);
 }
+legend{
+    text-align: center;
+    text-transform: uppercase;
+}
 label{
     display: block;
 }
 input, textarea{
     margin: auto;
-    padding: 7px 0px;
+    padding: 7px 9px;
     border-radius: 14px;
     border-style: none;
-    width: 40vw;
+    width: 25vw;
     margin-bottom: 0.5em;
     box-shadow: -4px 5px 1px var(--cor2);
+    font-size: 17px;
 }
 textarea{
-    max-height: 50px;
-    max-width: 260px;
+    max-height: 70px;
+    max-width: 25vw;
 }
 label[for="iimage"]{
     padding: 5px 7px;
@@ -82,5 +87,7 @@ div#botao{
 input[type="submit"]{
     margin-top: .8em;
     background-color: #7aa5dcc3;
-    width: 90%;
+    width: 70%;
+    padding: 10px 0px;
+    cursor: pointer;
 }
